--- a/estilos/style.css
+++ b/estilos/style.css
@@ -35,7 +35,7 @@ section#login {
     overflow: hidden;
 
     width: 250px;
-    height: 500px;
+    height: 515px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 
@@ -55,4 +55,66 @@ section#login > div#formulario {
     padding: 10px;
 
 
+}
+
+div#formulario > h1 {
+    text-align: center;
+    margin-bottom: 10px;
+    
+}
+
+div#formulario > p {
+    font-size: 0.8em;
+}
+
+form > div.campo {
+    background-color: #5f2c82;
+    display: block;
+    width: 100%;
+    height: 4px;
+    border-radius: 5px;
+    margin: 5px 0px ;
+}
+
+div.campo > label { 
+    display: none;
+}
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 30px;
+    background-color: #49a09d;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover {
+    background-color: #275553;
+}
+
+form > a.botao {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 30px;
+    padding-top: 5px;
+    margin-top: 5px;
+    background-color: #ffffff;
+    color: #275553;
+    border: 1px solid #49a09d;
+    border-radius: 7px;
+    text-decoration: none;
+}
+
+form > a.botao:hover { 
+    background-color: #6ae4e0;
+}
+
+form > a.botao > i {
+    font-size: 0.8em;
 }
